--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,5 +1,5 @@
 
- <div class="row" *ngIf="member">
+ <div class="row" >
     <!-- col-4 takes 1/4 of the space -->
     <div class="col-4">
         <div class="card">
@@ -35,7 +35,7 @@
         <div class="card-footer">
            <div class="btn-group d-flex">
                <button class="btn btn-primary">Like</button>
-               <button class="btn btn-success">Messages</button>
+               <button (click)="selectTab('Messages')" class="btn btn-success">Messages</button>
            </div>
         </div>
         </div>
@@ -45,27 +45,27 @@
 
     <div class="col-8">
         <!-- table is a angular component and css is encalpuslated we cannot override them so we create class -->
-        <tabset class="member-tabset">
-            <tab heading="About {{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab> 
 
-            <tab heading="Interest">
+            <tab heading="Interest" (selectTab)="onTabActivated($event)">
                 <h4>Interest</h4>
                 <p>{{member.interests}}</p>
             </tab> 
 
-            <tab heading="Photos">
+            <tab heading="Photos" (selectTab)="onTabActivated($event)">
                 <!-- this is done referring to ngx galler document. -->
                 <!-- https://github.com/kolkov/ngx-gallery -->
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery" ></ngx-gallery>
             </tab>
-            
-            <tab heading="Messages">
-                <p>messsages will go here</p>
+            <!-- this message is loading even if just want load to profile. thats a problem -->
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                <app-member-messages [messages]="messages" [username]="member.userName" ></app-member-messages>
             </tab> 
 
         </tabset>
