end of section 15

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -65,7 +65,8 @@
                 </td>
 
                 <td>{{message.messageSent | timeago}}</td>
-                <td><button class="btn btn-danger">Delete</button></td>
+                <!-- stop propogation will stop going inside the component -->
+                <td><button (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)" class="btn btn-danger">Delete</button></td>
 
             </tr>
         </tbody>
