--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -7,6 +7,9 @@
         <img src="{{member.photoUrl || './assets/user.png' }}" alt="{{member.knownAs}}"
         class="card-ing-top img-thumbnail">
         <div class="card-body">
+            <div class="mb-2" *ngIf="(presenceService.onlineUsers$ | async)?.includes(member.userName)">
+                <i class="class fa fa-circle text-success"></i> Online now
+            </div>
            <div>
                <strong>Location:</strong>
                <p>{{member.city}}, {{member.country}}</p>
@@ -65,7 +68,7 @@
             </tab>
             <!-- this message is loading even if just want load to profile. thats a problem -->
             <tab heading="Messages" (selectTab)="onTabActivated($event)">
-                <app-member-messages [messages]="messages" [username]="member.userName" ></app-member-messages>
+                <app-member-messages  [username]="member.userName" ></app-member-messages>
             </tab> 
 
         </tabset>
